dagre + jsPlamb works together now

--- a/demo/dagre-d3-simple.css
+++ b/demo/dagre-d3-simple.css
@@ -4,9 +4,9 @@ text {
   font-size: 14px;
 }
 
-rect {
-  fill: #fff;
-}
+/*rect {*/
+  /*fill: #fff;*/
+/*}*/
 
 .node > rect {
   stroke-width: 3px;
