--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,14 +1,42 @@
 
 
+/*.node, .jsplumb-node{*/
+    /*border:1px solid black;*/
+    /*width:100px;*/
+    /*height:50px;*/
+    /*min-height: 10px;*/
+    /*min-width: 10px;*/
+    /*text-align:center;*/
+    /*position:absolute;*/
+/*}*/
+
 .node, .jsplumb-node{
-    border:1px solid black;
-    width:100px;
-    height:50px;
-    min-height: 10px;
-    min-width: 10px;
-    text-align:center;
-    position:absolute;
+    /*width: 5em;*/
+    width: 90px;
+    height: 40px;
+    padding: 1em;
+    position: absolute;
+    border: 1px solid black;
+    z-index: 4;
+    border-radius: 1em;
+    border: 1px solid #2e6f9a;
+    box-shadow: 2px 2px 19px #e0e0e0;
+    -o-box-shadow: 2px 2px 19px #e0e0e0;
+    -webkit-box-shadow: 2px 2px 19px #e0e0e0;
+    -moz-box-shadow: 2px 2px 19px #e0e0e0;
+    -moz-border-radius: 0.5em;
+    border-radius: 0.5em;
+    opacity: 0.8;
+    filter: alpha(opacity=80);
+    cursor: move;
+    background-color: white;
+    font-size: 11px;
+    -webkit-transition: background-color 0.25s ease-in;
+    -moz-transition: background-color 0.25s ease-in;
+    transition: background-color 0.25s ease-in;
 }
+
+
 
 .nested{
     position: absolute;
@@ -16,11 +44,26 @@
     border:1px solid black;
 }
 
-._jsPlumb_drag_select * {
-    -webkit-touch-callout: none;
-    -webkit-user-select: none;
-    -khtml-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
+/*._jsPlumb_drag_select * {*/
+    /*-webkit-touch-callout: none;*/
+    /*-webkit-user-select: none;*/
+    /*-khtml-user-select: none;*/
+    /*-moz-user-select: none;*/
+    /*-ms-user-select: none;*/
+    /*user-select: none;*/
+/*}*/
+
+
+.ep{
+    position: absolute;
+    bottom: 37%;
+    right: 5px;
+    width: 2em;
+    height: 2em;
+    background-color: orange;
+    cursor: pointer;
+    box-shadow: 0px 0px 2px black;
+    -webkit-transition: -webkit-box-shadow 0.25s ease-in;
+    -moz-transition: -moz-box-shadow 0.25s ease-in;
+    transition: box-shadow 0.25s ease-in;
 }
